[package]
name = "b4sam"
version = "0.1.7"
edition = "2021"

description = "A tool to review code with AI"
license = "MIT"
repository = "https://github.com/anchpop/b4sam"
authors = ["Andre Popovitch <andre@popovit.ch>"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.36", features = ["derive"] }
schemars = "1.0.0-alpha.17"
serde = "1.0.218"
tokio = { version = "1.43.0", features = ["full"] }
tysm = "0.7.0-alpha.2"
